compiler/profiling/TestTypeProfiling.java fails when JVMCI build disabled

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11, 12
    • Component/s: hotspot
    • b23
    • generic
    • generic

        I am testing JDK-8206135 and when I disabled jvmci, graal and aot build in configure (--with-jvm-features=-graal,-aot,-jvmci --disable-aot) test TestTypeProfiling.java fails (reproduced on linux-x64):

        java.lang.RuntimeException: mRetTypeCheck is not deoptimized (should deoptimize for actual type check)
        at compiler.profiling.TestTypeProfiling.main(TestTypeProfiling.java:132)

        No additional jtreg flags are needed to reproduce.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: