8206953: compiler/profiling/TestTypeProfiling.java fails when JVMCI build disabled

Restore original behavior when C2 is used

Reviewed-by: thartmann, mdoerr, dnsimon, gdub